# cycling-overlay

./: .gitattributes  .gitignore  README.md
.githooks/: pre-commit
.github/workflows/: fmt.yml
crates/activity/: Cargo.toml
crates/activity/src/: fit_parse.rs  geo.rs  gpx_parse.rs  interp.rs  lib.rs  sample.rs  smooth.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  ffmpeg.rs  main.rs  pipeline.rs  run.rs
crates/cli/tests/: dry_run.rs  end_to_end.rs  progress_json.rs
crates/layout/src/: lib.rs  validate.rs
crates/render/src/: frame.rs  lib.rs  text.rs
crates/render/src/widgets/: elevation_profile.rs  gauge.rs  meter.rs  mod.rs  readout.rs  scale.rs
crates/render/tests/: golden.rs
docs/plans/: 2026-04-20-gpx-overlay-design.md  2026-04-20-gpx-overlay-v1-impl.md  2026-04-22-meter-gauge-design.md  2026-04-22-meter-gauge-impl.md  2026-04-23-tauri-gui-design.md  2026-04-23-tauri-gui-impl.md
examples/: layout.json  short.gpx
gui/: .prettierrc.json  README.md  index.html  package-lock.json  package.json
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: binary.rs  export.rs  main.rs  session.rs  watcher.rs
gui/src/components/: CodecSelect.svelte  CodecSelect.test.ts  ExportFooter.svelte  PreviewPane.svelte  Seekbar.svelte  Sidebar.svelte  StartupBanner.svelte
gui/src/lib/: preview-dispatcher.test.ts  preview-dispatcher.ts  stores.ts
