[package]
name = "gpx-overlay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gpx-overlay"
path = "src/main.rs"

[dependencies]
activity = { path = "../activity" }
layout = { path = "../layout" }
render = { path = "../render" }
tiny-skia = "0.11"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
anyhow.workspace = true
serde_json.workspace = true
num_cpus = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
ffmpeg-tests = []
